// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`basic 1`] = `
"// basic.d.ts
//#region tests/fixtures/basic.d.ts
declare const foo: number;
type SomeType<T> = T;
type FooType = string;
interface Interface {}
declare function fn(arg0: SomeType<FooType>, opt: Interface): void;
declare enum Enum {
  A = 0,
  B = 1,
  C = 2
}
declare class Cls {
  foo: string;
  fn(e: Enum): void;
}
//#endregion
export { Cls, Enum, fn, foo };
// basic.js
//#region tests/fixtures/basic.ts
const foo = 42;
function fn(arg0, opt) {}
let Enum = /* @__PURE__ */ function(Enum) {
	Enum[Enum["A"] = 0] = "A";
	Enum[Enum["B"] = 1] = "B";
	Enum[Enum["C"] = 2] = "C";
	return Enum;
}({});
var Cls = class {
	foo;
	fn(e) {}
};

//#endregion
export { Cls, Enum, fn, foo };"
`;

exports[`cjs exports 1`] = `
"// cjs-exports.js

//#region tests/fixtures/cjs-exports.ts
var cjs_exports_default = 42;

//#endregion
module.exports = cjs_exports_default;"
`;

exports[`cjs exports 2`] = `
"// cjs-exports.d.ts
//#region tests/fixtures/cjs-exports.d.ts
declare const _default: number;
//#endregion
export = _default;"
`;

exports[`codeSplitting 1`] = `
"// entry.d.ts
//#region tests/fixtures/manual-chunk/shared1.d.ts
declare const shared1 = "shared1";
//#endregion
//#region tests/fixtures/manual-chunk/shared2.d.ts
declare const shared2 = "shared2";
//#endregion
export { shared1, shared2 };"
`;

exports[`css.ts files 1`] = `
"// index.d.ts
//#region tests/fixtures/css-ts/file.css.d.ts
declare const myClass: string;
//#endregion
export { myClass };"
`;

exports[`cyclic import 1`] = `
"// a.d.ts
//#region tests/fixtures/cyclic-import/b.d.ts
type SomeBoolean = boolean;
//#endregion
//#region tests/fixtures/cyclic-import/a.d.ts
interface SomeInterface<T> {
  value: T;
}
type T = SomeBoolean;
//#endregion
export { SomeInterface, T };
// b.d.ts
//#region tests/fixtures/cyclic-import/a.d.ts
interface SomeInterface<T> {
  value: T;
}
//#endregion
//#region tests/fixtures/cyclic-import/b.d.ts
declare class SomeClass<T extends SomeInterface<number>> {
  value: T;
  constructor(value: T);
  doSomething<T extends SomeInterface<number>>(value: T): T;
}
type SomeBoolean = boolean;
//#endregion
export { SomeBoolean, SomeClass };"
`;

exports[`declare module 1`] = `
"// declare-module.d.ts
//#region tests/fixtures/declare-module.d.ts
declare module "virtual" {
  const _default: string;
  export default _default;
}
//#endregion"
`;

exports[`deterministic namespace import index 1`] = `
"// a.d.ts
import * as stub_lib from "stub_lib";

//#region tests/fixtures/import-type-multi/a.d.ts
type MyTypeA = stub_lib.LibType;
//#endregion
export { MyTypeA };
// b.d.ts
import * as stub_lib from "stub_lib";

//#region tests/fixtures/import-type-multi/b.d.ts
type MyTypeB = stub_lib.LibType;
//#endregion
export { MyTypeB };
// c.d.ts
import * as stub_lib from "stub_lib";

//#region tests/fixtures/import-type-multi/c.d.ts
type MyTypeC = stub_lib.LibType;
//#endregion
export { MyTypeC };"
`;

exports[`deterministic namespace import index 2`] = `
"// a.d.ts
import * as stub_lib from "stub_lib";

//#region tests/fixtures/import-type-multi/a.d.ts
type MyTypeA = stub_lib.LibType;
//#endregion
export { MyTypeA };
// b.d.ts
import * as stub_lib from "stub_lib";

//#region tests/fixtures/import-type-multi/b.d.ts
type MyTypeB = stub_lib.LibType;
//#endregion
export { MyTypeB };
// c.d.ts
import * as stub_lib from "stub_lib";

//#region tests/fixtures/import-type-multi/c.d.ts
type MyTypeC = stub_lib.LibType;
//#endregion
export { MyTypeC };"
`;

exports[`deterministic namespace import index 3`] = `
"// a.d.ts
import * as stub_lib from "stub_lib";

//#region tests/fixtures/import-type-multi/a.d.ts
type MyTypeA = stub_lib.LibType;
//#endregion
export { MyTypeA };
// b.d.ts
import * as stub_lib from "stub_lib";

//#region tests/fixtures/import-type-multi/b.d.ts
type MyTypeB = stub_lib.LibType;
//#endregion
export { MyTypeB };
// c.d.ts
import * as stub_lib from "stub_lib";

//#region tests/fixtures/import-type-multi/c.d.ts
type MyTypeC = stub_lib.LibType;
//#endregion
export { MyTypeC };"
`;

exports[`dts input > custom chunk name 2`] = `
"// input1.d.ts
//#region tests/fixtures/dts-multi-input/types.d.ts
interface User {
  id: string;
  name: string;
}
//#endregion
//#region tests/fixtures/dts-multi-input/input1.d.ts
interface ApiResponse {
  data: User;
}
//#endregion
export { ApiResponse };
// input2.d.ts
//#region tests/fixtures/dts-multi-input/types.d.ts
interface User {
  id: string;
  name: string;
}
//#endregion
//#region tests/fixtures/dts-multi-input/input2.d.ts
interface UserWithAge extends User {
  age: number;
}
//#endregion
export { UserWithAge };"
`;

exports[`dts input > default chunk name 2`] = `
"// input1.d.mts
//#region tests/fixtures/dts-multi-input/types.d.ts
interface User {
  id: string;
  name: string;
}
//#endregion
//#region tests/fixtures/dts-multi-input/input1.d.ts
interface ApiResponse {
  data: User;
}
//#endregion
export { ApiResponse };
// input2.d.mts
//#region tests/fixtures/dts-multi-input/types.d.ts
interface User {
  id: string;
  name: string;
}
//#endregion
//#region tests/fixtures/dts-multi-input/input2.d.ts
interface UserWithAge extends User {
  age: number;
}
//#endregion
export { UserWithAge };"
`;

exports[`dts input > input array 1`] = `
"// dts-input.d.ts
//#region tests/fixtures/dts-input.d.ts
declare class Foo {}
//#endregion
export { Foo };"
`;

exports[`dts input > input object 1`] = `
"// index.d.ts
//#region tests/fixtures/dts-input.d.ts
declare class Foo {}
//#endregion
export { Foo };"
`;

exports[`entryFileNames > custom chunk name 2`] = `
"// input1.d.ts

// input2.d.ts
"
`;

exports[`entryFileNames > default chunk name 1`] = `
"// input1.d.mts
//#region tests/fixtures/alias/shared.d.ts
interface Shared {
  shared: string;
}
//#endregion
//#region tests/fixtures/alias/input2.d.ts
interface Input2 extends Shared {
  input2: string;
}
//#endregion
//#region tests/fixtures/alias/input1.d.ts
interface Input1 extends Input2 {
  input1: string;
}
declare const input1: Input1;
//#endregion
export { Input1, input1 };
// input2.d.mts
//#region tests/fixtures/alias/shared.d.ts
interface Shared {
  shared: string;
}
//#endregion
//#region tests/fixtures/alias/input2.d.ts
interface Input2 extends Shared {
  input2: string;
}
declare const input2: Input2;
//#endregion
export { Input2, input2 };"
`;

exports[`infer false branch 1`] = `
"// index.d.ts
//#region tests/fixtures/infer-false-branch/mod.d.ts
type U = "mod";
//#endregion
//#region tests/fixtures/infer-false-branch/index.d.ts
type U$1 = "local";
type Test<T> = T extends Array<infer U> ? (T extends Array<infer U2> ? U2 : U) : U$1;
//#endregion
export { Test, type U };"
`;

exports[`infer type parameter 1`] = `
"// infer-type-param.d.ts
//#region tests/fixtures/infer-type-param.d.ts
type Mapped<T> = T extends Record<string, infer U> ? U : never;
type Fn1<U = unknown> = () => Mapped<U>;
type Fn2<V = unknown> = () => Mapped<V>;
//#endregion
export { Fn1, Fn2 };"
`;

exports[`input alias 1`] = `
"// output1.d.ts
//#region tests/fixtures/alias/shared.d.ts
interface Shared {
  shared: string;
}
//#endregion
//#region tests/fixtures/alias/input2.d.ts
interface Input2 extends Shared {
  input2: string;
}
//#endregion
//#region tests/fixtures/alias/input1.d.ts
interface Input1 extends Input2 {
  input1: string;
}
declare const input1: Input1;
//#endregion
export { Input1, input1 };
// output1.js
import "./shared-DBZIgKQm.js";
import { input2 } from "./output2/index.js";

//#region input1.ts
const input1 = {
	...input2,
	input1: "input1"
};

//#endregion
export { input1 };
// output2/index.d.ts
//#region tests/fixtures/alias/shared.d.ts
interface Shared {
  shared: string;
}
//#endregion
//#region tests/fixtures/alias/input2.d.ts
interface Input2 extends Shared {
  input2: string;
}
declare const input2: Input2;
//#endregion
export { Input2, input2 };
// output2/index.js
import { t as shared } from "../shared-DBZIgKQm.js";

//#region input2.ts
const input2 = {
	...shared,
	input2: "input2"
};

//#endregion
export { input2 };
// shared-DBZIgKQm.js
//#region shared.ts
const shared = { shared: "shared" };

//#endregion
export { shared as t };"
`;

exports[`manualChunks 1`] = `
"// entry.d.ts
//#region tests/fixtures/manual-chunk/shared1.d.ts
declare const shared1 = "shared1";
//#endregion
//#region tests/fixtures/manual-chunk/shared2.d.ts
declare const shared2 = "shared2";
//#endregion
export { shared1, shared2 };"
`;

exports[`re-export from lib > both 1`] = `
"// a.d.ts
export * from "stub-lib";
// b.d.ts
export * from "stub-lib";
export { type LibType };"
`;

exports[`re-export from lib > onlyA 1`] = `
"// a.d.ts
export * from "stub-lib";"
`;

exports[`re-export from lib > onlyB 1`] = `
"// b.d.ts
export * from "stub-lib";
export { type LibType };"
`;

exports[`real css imports are externalized 1`] = `
"// index.d.ts
//#region tests/fixtures/css-real/index.d.ts
declare const foo: number;
//#endregion
export { foo };"
`;

exports[`resolve dts 1`] = `
"// index.d.ts
//#region tests/fixtures/resolve-dts/mod.d.ts
type Foo = string;
//#endregion
//#region tests/fixtures/resolve-dts/mod.d.d.ts
type Foo$1 = string;
//#endregion
export { Foo };
// index.js
"
`;

exports[`side effects 1`] = `
"// index.d.ts
//#region tests/fixtures/side-effects/mod.d.ts
declare global {
  let sideEffectExecuted: boolean;
}
//#endregion
export { };"
`;

exports[`sub namespace 1`] = `
"// sub-namespace.d.ts
//#region tests/fixtures/sub-namespace.d.ts
declare namespace Foo.Bar {
  export {};
}
//#endregion
export { };"
`;

exports[`tree-shaking 1`] = `
"// index.d.ts
import * as http from "node:http";

//#region tests/fixtures/tree-shaking/mod.d.ts
type A = string;
//#endregion
export { type A };
// index.js
"
`;

exports[`tsgo with custom path 1`] = `
"// basic.d.ts
//#region basic.d.ts
declare const foo: number;
type SomeType<T> = T;
type FooType = string;
interface Interface {}
declare function fn(arg0: SomeType<FooType>, opt: Interface): void;
declare enum Enum {
  A = 0,
  B = 1,
  C = 2
}
declare class Cls {
  foo: string;
  fn(e: Enum): void;
}
//#endregion
export { Cls, Enum, fn, foo };
// basic.js
//#region tests/fixtures/basic.ts
const foo = 42;
function fn(arg0, opt) {}
let Enum = /* @__PURE__ */ function(Enum) {
	Enum[Enum["A"] = 0] = "A";
	Enum[Enum["B"] = 1] = "B";
	Enum[Enum["C"] = 2] = "C";
	return Enum;
}({});
var Cls = class {
	foo;
	fn(e) {}
};

//#endregion
export { Cls, Enum, fn, foo };"
`;

exports[`tsx 1`] = `
"// tsx.d.ts
import { JSX } from "solid-js";

//#region tests/fixtures/tsx.d.ts
declare function createComponent(): JSX.HTMLAttributes<HTMLElement>;
//#endregion
export { createComponent };
// tsx.js
import { jsx } from "react/jsx-runtime";

//#region tests/fixtures/tsx.tsx
function createComponent() {
	return /* @__PURE__ */ jsx("div", {});
}

//#endregion
export { createComponent };"
`;

exports[`type-only export 1`] = `
"// index.d.ts
declare namespace namespace_d_exports {
  export { ns };
}
declare const ns = 42;
//#region tests/fixtures/type-only-export/mod.d.ts
declare class A {}
declare class B {}
//#endregion
//#region tests/fixtures/type-only-export/all.d.ts
declare const all = 42;
//#endregion
export { A as RuntimeA, A as TypeA, B as TypeB, RuntimeA as TypeC, all, type namespace_d_exports as ns };"
`;
